[package]
name = "articles"
version = "0.1.0"
authors = ["Andre Eickler <797483+eickler@users.noreply.github.com>"]
edition = "2018"

[dependencies]
dotenv = "^0.15.0"
rocket = "^0.4.6"
rocket_codegen = "^0.4.6"
diesel = { version = "^1.4.4", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "^0.4.19", features = ["serde"] }
serde = { version = "^1.0.118", features = ["derive"] }
serde_json = "^1.0.60"
r2d2 = "^0.8.9"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
